--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 
 <body>
-    <h1>Joe's Recipes</h1>
+    <h1>Joe's Recipes!</h1>
 
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
