--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/lasagna.html">Mac-and-Cheese</a></li>
-    <li><a href="recipes/lasagna.html">Pizza</a></li>
+    <li><a href="recipes/mac-and-cheese.html">Mac & Cheese</a></li>
+    <li><a href="recipes/pizza.html">Pizza</a></li>
     </ul>
 
 </body>
