--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -11,7 +11,7 @@
 
     <h1>Mac & Cheese</h1>
 
-    <img src="../images/MacAndCheesePic.jpg" alt="Picture of Lasagna" width="300" height="200">
+    <img src="../images/MacAndCheesePic.jpg" alt="Picture of Mac & Cheese" width="300" height="200">
 
     <h2>Description</h2> 
 
