Add finishing touches

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
 
     <h1>Lasagna</h1>
 
-    <img src="../images/LasagnaPic.jpeg" alt="Picture of Lasagna" width="300" height="200">
+    <img src="../images/LasagnaPic.jpeg" rel="noopener noreferrer" target="_self" alt="Picture of Lasagna" width="300" height="200">
 
     <h2>Description</h2> 
 
