--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,7 +11,7 @@
 
     <h1>Pizza</h1>
 
-    <img src="../images/PizzaPic.jpg" alt="Picture of Pizza" width="300" height="200">
+    <img src="../images/PizzaPic.jpg" rel="noopener noreferrer" target="_self" alt="Picture of Pizza" width="300" height="200">
 
     <h2>Description</h2> 
 
